fix added gap in between sections

--- a/css/style.css
+++ b/css/style.css
@@ -138,6 +138,7 @@ nav{
 main{
     display: flex;
     flex-direction: column;
+    gap: 60px;
 }
 
 .section-one{
